--- a/src/main/resources/com/example/tictacktoe/game-view.fxml
+++ b/src/main/resources/com/example/tictacktoe/game-view.fxml
@@ -1,16 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.tictacktoe.GameController">
+<BorderPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tictacktoe.GameController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
+   <center>
+      <GridPane prefHeight="115.0" prefWidth="115.0" BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="NEVER" minWidth="100.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="NEVER" minWidth="100.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="NEVER" minWidth="100.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="NEVER" />
+          <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="NEVER" />
+          <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="NEVER" />
+        </rowConstraints>
+         <children>
+            <Button maxHeight="100" maxWidth="100" text="1" />
+            <Button maxHeight="100" maxWidth="100" text="2" GridPane.columnIndex="1" />
+            <Button maxHeight="100" maxWidth="100" text="3" GridPane.columnIndex="2" />
+            <Button maxHeight="100" maxWidth="100" text="4" GridPane.rowIndex="1" />
+            <Button maxHeight="100" maxWidth="100" text="5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button maxHeight="100" maxWidth="100" text="6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button maxHeight="100" maxWidth="100" text="7" GridPane.rowIndex="2" />
+            <Button maxHeight="100" maxWidth="100" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button maxHeight="100" maxWidth="100" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
+   </center>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+
+
+</BorderPane>
