--- a/src/main/resources/com/example/tictacktoe/game-view.fxml
+++ b/src/main/resources/com/example/tictacktoe/game-view.fxml
@@ -9,7 +9,7 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <center>
-      <GridPane prefHeight="115.0" prefWidth="115.0" BorderPane.alignment="CENTER">
+      <GridPane gridLinesVisible="true" prefHeight="115.0" prefWidth="115.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="NEVER" minWidth="100.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="NEVER" minWidth="100.0" prefWidth="100.0" />
@@ -22,19 +22,22 @@
         </rowConstraints>
 
          <children>
-            <Button fx:id="button1" maxHeight="100" maxWidth="100" onMouseClicked="#Button1Clicked" text="1" />
-            <Button fx:id="button2" maxHeight="100" maxWidth="100" onMouseClicked="#Button2Clicked" text="2" GridPane.columnIndex="1" />
-            <Button fx:id="button3" maxHeight="100" maxWidth="100" onMouseClicked="#Button3Clicked" text="3" GridPane.columnIndex="2" />
-            <Button fx:id="button4" maxHeight="100" maxWidth="100" onMouseClicked="#Button4Clicked" text="4" GridPane.rowIndex="1" />
-            <Button fx:id="button5" maxHeight="100" maxWidth="100" onMouseClicked="#Button5Clicked" text="5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button fx:id="button6" maxHeight="100" maxWidth="100" onMouseClicked="#Button6Clicked" text="6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Button fx:id="button7" maxHeight="100" maxWidth="100" onMouseClicked="#Button7Clicked" text="7" GridPane.rowIndex="2" />
-            <Button fx:id="button8" maxHeight="100" maxWidth="100" onMouseClicked="#Button8Clicked" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Button fx:id="button9" maxHeight="100" maxWidth="100" onMouseClicked="#Button9Clicked" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button fx:id="button1" maxHeight="100" maxWidth="100" onMouseClicked="#Button1Clicked" text="" />
+            <Button fx:id="button2" maxHeight="100" maxWidth="100" onMouseClicked="#Button2Clicked" text="" GridPane.columnIndex="1" />
+            <Button fx:id="button3" maxHeight="100" maxWidth="100" onMouseClicked="#Button3Clicked" text="" GridPane.columnIndex="2" />
+            <Button fx:id="button4" maxHeight="100" maxWidth="100" onMouseClicked="#Button4Clicked" text="" GridPane.rowIndex="1" />
+            <Button fx:id="button5" maxHeight="100" maxWidth="100" onMouseClicked="#Button5Clicked" text="" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button fx:id="button6" maxHeight="100" maxWidth="100" onMouseClicked="#Button6Clicked" text="" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button fx:id="button7" maxHeight="100" maxWidth="100" onMouseClicked="#Button7Clicked" text="" GridPane.rowIndex="2" />
+            <Button fx:id="button8" maxHeight="100" maxWidth="100" onMouseClicked="#Button8Clicked" text="" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button fx:id="button9" maxHeight="100" maxWidth="100" onMouseClicked="#Button9Clicked" text="" GridPane.columnIndex="2" GridPane.rowIndex="2" />
          </children>
 
       </GridPane>
    </center>
+   <top>
+      <Label fx:id="winnerAnounce" text="" BorderPane.alignment="CENTER" />
+   </top>
 
 
 
