added buttons for playing again, and exiting the program

--- a/src/main/resources/com/example/tictacktoe/game-view.fxml
+++ b/src/main/resources/com/example/tictacktoe/game-view.fxml
@@ -38,6 +38,14 @@
    <top>
       <Label fx:id="winnerAnounce" text="" BorderPane.alignment="CENTER" />
    </top>
+   <bottom>
+      <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <buttons>
+            <Button fx:id="playAgainButton" onMouseClicked="#PlayAgainButtonClicked" text="Play Again"  />
+            <Button fx:id="exitProgramButton" onMouseClicked="#ExitProgramButtonClicked" text="Exit Program"  />
+        </buttons>
+      </ButtonBar>
+   </bottom>
 
 
 
